--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-31 20:41+0100\n"
+"POT-Creation-Date: 2021-01-31 23:36+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -6133,12 +6133,11 @@ msgstr ""
 #. type: textblock
 #: dh_installdocs:91
 msgid ""
-"Please be aware that this deduplication currently only works if "
-"B<dh_installdocs> is called only once during the package build as "
-"deduplication is done in memory only. Especially calling B<dh_installdocs "
-"-p>I<package> in combination with using F<debian/>I<package>F<.doc-base.*> "
-"files can lead to uninstallable packages. See "
-"L<https://bugs.debian.org/980903> for details."
+"Please be aware that this deduplication is currently done in memory only, so "
+"for now it requires B<dh_installdocs> to be called no more than once during "
+"the package build. Calling B<dh_installdocs -p>I<package> in combination "
+"with using F<debian/>I<package>F<.doc-base.*> files can lead to "
+"uninstallable packages. See L<https://bugs.debian.org/980903> for details."
 msgstr ""
 
 #. type: textblock
