--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debhelper manpages\n"
-"POT-Creation-Date: 2021-01-31 20:41+0100\n"
+"POT-Creation-Date: 2021-01-31 23:36+0100\n"
 "PO-Revision-Date: 2019-01-18 13:58+0100\n"
 "Last-Translator: Baptiste Jammet <baptiste@mailoo.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -8129,12 +8129,11 @@ msgstr ""
 #. type: textblock
 #: dh_installdocs:91
 msgid ""
-"Please be aware that this deduplication currently only works if "
-"B<dh_installdocs> is called only once during the package build as "
-"deduplication is done in memory only. Especially calling B<dh_installdocs -"
-"p>I<package> in combination with using F<debian/>I<package>F<.doc-base.*> "
-"files can lead to uninstallable packages. See L<https://bugs.debian."
-"org/980903> for details."
+"Please be aware that this deduplication is currently done in memory only, so "
+"for now it requires B<dh_installdocs> to be called no more than once during "
+"the package build. Calling B<dh_installdocs -p>I<package> in combination "
+"with using F<debian/>I<package>F<.doc-base.*> files can lead to "
+"uninstallable packages. See L<https://bugs.debian.org/980903> for details."
 msgstr ""
 
 # type: textblock
