--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debhelper 13.2\n"
 "Report-Msgid-Bugs-To: debhelper@packages.debian.org\n"
-"POT-Creation-Date: 2021-01-31 20:41+0100\n"
+"POT-Creation-Date: 2021-01-31 23:36+0100\n"
 "PO-Revision-Date: 2020-07-10 13:40+0000\n"
 "Last-Translator: Américo Monteiro <a_monteiro@gmx.com>\n"
 "Language-Team: Portuguese <>\n"
@@ -8024,12 +8024,11 @@ msgstr ""
 #. type: textblock
 #: dh_installdocs:91
 msgid ""
-"Please be aware that this deduplication currently only works if "
-"B<dh_installdocs> is called only once during the package build as "
-"deduplication is done in memory only. Especially calling B<dh_installdocs -"
-"p>I<package> in combination with using F<debian/>I<package>F<.doc-base.*> "
-"files can lead to uninstallable packages. See L<https://bugs.debian."
-"org/980903> for details."
+"Please be aware that this deduplication is currently done in memory only, so "
+"for now it requires B<dh_installdocs> to be called no more than once during "
+"the package build. Calling B<dh_installdocs -p>I<package> in combination "
+"with using F<debian/>I<package>F<.doc-base.*> files can lead to "
+"uninstallable packages. See L<https://bugs.debian.org/980903> for details."
 msgstr ""
 
 #. type: textblock
