--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-debhelper (13.3.2) UNRELEASED; urgency=medium
+debhelper (13.3.2) unstable; urgency=medium
+
+  * Team upload.
 
   [ Niels Thykier ]
   * cmake.pm: Correct parameter -DCMAKE_BUILD_RPATH_USE_ORIGIN=ON
@@ -20,7 +22,7 @@ debhelper (13.3.2) UNRELEASED; urgency=medium
   [ Translations ]
   * Update German translation (Pfannenstein Erik)  (Closes: #979608)
 
- -- Niels Thykier <niels@thykier.net>  Sun, 10 Jan 2021 17:00:05 +0000
+ -- Axel Beckert <abe@debian.org>  Mon, 01 Feb 2021 00:53:24 +0100
 
 debhelper (13.3.1) unstable; urgency=medium
 
