dh_installsysusers: Add  as alternative
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (13.3.3) UNRELEASED; urgency=medium
+
+  * dh_installsysusers: Add systemd-sysusers as alternative provider
+    in the ${misc:Depends} dependency as that is the name used by
+    opensysusers.
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 03 Feb 2021 17:28:18 +0000
+
 debhelper (13.3.2) unstable; urgency=medium
 
   * Team upload.
