Update on Portuguese translation of MANPAGE (documentation)
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 debhelper (13.3.3) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh_installsysusers: Add systemd-sysusers as alternative provider
     in the ${misc:Depends} dependency as that is the name used by
     opensysusers.
+
+  [ Translations ]
+  * Update Portuguese translation (Américo Monteiro)  (Closes: #981567)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 03 Feb 2021 17:28:18 +0000
 
