--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -2,13 +2,13 @@
 # Copyright (C) 2014 The debhelper's copyright holder.
 # This file is distributed under the same license as the debhelper package.
 #
-# Américo Monteiro <a_monteiro@gmx.com>, 2014 - 2020.
+# Américo Monteiro <a_monteiro@gmx.com>, 2014 to 2021.
 msgid ""
 msgstr ""
-"Project-Id-Version: debhelper 13.2\n"
+"Project-Id-Version: debhelper 13.3.2\n"
 "Report-Msgid-Bugs-To: debhelper@packages.debian.org\n"
 "POT-Creation-Date: 2021-01-31 23:36+0100\n"
-"PO-Revision-Date: 2020-07-10 13:40+0000\n"
+"PO-Revision-Date: 2021-02-01 14:37+0000\n"
 "Last-Translator: Américo Monteiro <a_monteiro@gmx.com>\n"
 "Language-Team: Portuguese <>\n"
 "Language: pt\n"
@@ -2721,7 +2721,6 @@ msgstr ""
 
 #. type: textblock
 #: debhelper.pod:1237
-#, fuzzy
 #| msgid ""
 #| "This can cause issues with running binaries directly from the build "
 #| "directories as they might now require a manually set B<LD_LIBRARY_PATH>.  "
@@ -2744,21 +2743,20 @@ msgstr ""
 "B<LD_LIBRARY_PATH> definida manualmente. Se você precisa de sobrepor esta "
 "alteração, nós recomendamos que tente passar a opção B<-"
 "DCMAKE_SKIP_RPATH=OFF> primeiro para ver se isso corrige o problema "
-"(deixando B<BUILD_RPATH_USE_ORIGIN> na sua nova predefinição). Isto deve "
-"desfazer a necessidade de B<LD_LIBRARY_PATH> e evitar os problemas de "
+"(deixando B<CMAKE_BUILD_RPATH_USE_ORIGIN> na sua nova predefinição). Isto "
+"deve desfazer a necessidade de B<LD_LIBRARY_PATH> e evitar os problemas de "
 "reprodutibilidade em Linux, onde B<$ORIGIN> é suportado pelos vinculadores "
 "de tempo-de-execução."
 
 #. type: textblock
 #: debhelper.pod:1247
-#, fuzzy
 #| msgid ""
 #| "B<dh_installsystemduser> is now included in the B<dh> standard sequence "
 #| "by default."
 msgid "The tool B<dh_installsysusers> is now included in the default sequence."
 msgstr ""
-"B<dh_installsystemduser> é agora incluído na sequência standard do B<dh> por "
-"predefinição."
+"A ferramenta B<dh_installsysusers> está agora incluída na sequência "
+"predefinida."
 
 #. type: =head1
 #: debhelper.pod:1253 dh_auto_test:48 dh_dwz:69 dh_installcatalogs:67
@@ -3517,14 +3515,12 @@ msgstr ""
 
 #. type: textblock
 #: debhelper.pod:1542
-#, fuzzy
 #| msgid ""
 #| "This environment variable is intended for testing purposes; not "
 #| "production builds."
 msgid "This option is intended for testing purposes; not production builds."
 msgstr ""
-"Esta variável de ambiente destina-se para objectivos de teste; não para "
-"compilações de produção."
+"Esta opção destina-se a objectivos de teste; não compilações produtivas."
 
 #. type: =item
 #: debhelper.pod:1544
@@ -4369,7 +4365,8 @@ msgid ""
 "      #\n"
 "      # And it gets even more complicated to reason about if dh needs to\n"
 "      # recurse into debian/rules because you have an \"explicit\"\n"
-"      # standard target (e.g. a \"build-arch:\" target separate from \"%:\").\n"
+"      # standard target (e.g. a \"build-arch:\" target separate from \""
+"%:\").\n"
 "      ifneq (...)\n"
 "      override_dh_baz:\n"
 "          maybe run this\n"
@@ -4384,7 +4381,8 @@ msgstr ""
 "      #\n"
 "      # And it gets even more complicated to reason about if dh needs to\n"
 "      # recurse into debian/rules because you have an \"explicit\"\n"
-"      # standard target (e.g. a \"build-arch:\" target separate from \"%:\").\n"
+"      # standard target (e.g. a \"build-arch:\" target separate from \""
+"%:\").\n"
 "      ifneq (...)\n"
 "      override_dh_baz:\n"
 "          maybe run this\n"
@@ -5772,14 +5770,18 @@ msgstr ""
 #: dh_clean:25
 #, no-wrap
 msgid ""
-"It removes the package build directories, and removes some other files including\n"
-"F<debian/files>, and any detritus left behind by other debhelper commands. It\n"
+"It removes the package build directories, and removes some other files"
+" including\n"
+"F<debian/files>, and any detritus left behind by other debhelper commands."
+" It\n"
 "also removes common files that should not appear in a Debian diff:\n"
 "  #*# *~ DEADJOE *.orig *.rej *.SUMS TAGS .deps/* *.P *-stamp\n"
 "\n"
 msgstr ""
-"Remove os directórios de compilação do pacote, e remove mais alguns ficheiros incluindo\n"
-"F<debian/files>, e quaisquer detritos deixados por outros comandos debhelper. Também\n"
+"Remove os directórios de compilação do pacote, e remove mais alguns ficheiros"
+" incluindo\n"
+"F<debian/files>, e quaisquer detritos deixados por outros comandos debhelper."
+" Também\n"
 "remove ficheiros comuns que não deveriam aparecer num diff de Debian:\n"
 "  #*# *~ DEADJOE *.orig *.rej *.SUMS TAGS .deps/* *.P *-stamp\n"
 "\n"
@@ -7427,7 +7429,8 @@ msgid ""
 "\t# Script for #PACKAGE#\n"
 "\t#TOKEN#\n"
 "\tEOF\n"
-"    dh_installdeb -pfoo -pbar -pbaz  --define TOKEN=default --define pkg.bar.TOKEN=unique-bar-value \\\n"
+"    dh_installdeb -pfoo -pbar -pbaz  --define TOKEN=default --define"
+" pkg.bar.TOKEN=unique-bar-value \\\n"
 "      --define pkg.baz.TOKEN=unique-baz-value\n"
 "\n"
 msgstr ""
@@ -7443,7 +7446,8 @@ msgstr ""
 "\t# Script for #PACKAGE#\n"
 "\t#TOKEN#\n"
 "\tEOF\n"
-"    dh_installdeb -pfoo -pbar -pbaz  --define TOKEN=default --define pkg.bar.TOKEN=unique-bar-value \\\n"
+"    dh_installdeb -pfoo -pbar -pbaz  --define TOKEN=default --define"
+" pkg.bar.TOKEN=unique-bar-value \\\n"
 "      --define pkg.baz.TOKEN=unique-baz-value\n"
 "\n"
 
@@ -8016,7 +8020,7 @@ msgid ""
 "doc-base/doc-id."
 msgstr ""
 "Se o seu pacote precisa de registar mais do que um documento, você precisa "
-"de vários ficheiros baseados em doc, e pode nomeá-los desta maneira. Na "
+"de vários ficheiros baseados em doc, e pode-os nomear desta maneira. Na "
 "eventualidade de vários ficheiros baseados em doc deste estilo num único "
 "pacote fonte partilharem o mesmo doc-id, serão instalados em usr/share/doc-"
 "base/package-* em vez de usr/share/doc-base/doc-id."
@@ -8030,6 +8034,12 @@ msgid ""
 "with using F<debian/>I<package>F<.doc-base.*> files can lead to "
 "uninstallable packages. See L<https://bugs.debian.org/980903> for details."
 msgstr ""
+"Por favor tenha atenção que esta de-duplicação é actualmente feita apenas "
+"em memória, assim por agora requer o B<dh_installdocs> seja chamado não "
+"mais do que uma vez durante a compilação do pacote. Chamar "
+"B<dh_installdocs -p>I<package> em combinação com o uso de ficheiros "
+"F<debian/>I<package>F<.doc-base.*> pode levar a pacotes não instaláveis. "
+"Veja L<https://bugs.debian.org/980903> para detalhes."
 
 #. type: textblock
 #: dh_installdocs:106 dh_installinfo:47 dh_installman:92
@@ -11434,7 +11444,6 @@ msgstr ""
 
 #. type: textblock
 #: dh_strip:22
-#, fuzzy
 #| msgid ""
 #| "B<dh_strip> is a debhelper program that is responsible for stripping "
 #| "executables, shared libraries, and static libraries that are not used for "
@@ -11444,9 +11453,9 @@ msgid ""
 "debug symbols in executables, shared libraries, and static libraries that "
 "are not needed during execution."
 msgstr ""
-"B<dh_strip> é um programa debhelper que é responsável por despojar "
-"executáveis, bibliotecas partilhadas, e bibliotecas estáticas que não são "
-"usadas para depuração."
+"B<dh_strip> é um programa debhelper que é responsável por retirar símbolos "
+"de depuração em executáveis, bibliotecas partilhadas, e bibliotecas estáticas "
+"que não são necessárias durante a execução."
 
 #. type: textblock
 #: dh_strip:26
@@ -11606,10 +11615,12 @@ msgstr ""
 #: dh_strip:100
 #, no-wrap
 msgid ""
-"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< 2.1-3~)'\n"
+"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<<"
+" 2.1-3~)'\n"
 "\n"
 msgstr ""
-"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< 2.1-3~)'\n"
+"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<<"
+" 2.1-3~)'\n"
 "\n"
 
 #. type: =item
