--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (13.3.3) UNRELEASED; urgency=medium
+debhelper (13.3.3) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_installsysusers: Add systemd-sysusers as alternative provider
@@ -8,7 +8,7 @@ debhelper (13.3.3) UNRELEASED; urgency=medium
   [ Translations ]
   * Update Portuguese translation (Américo Monteiro)  (Closes: #981567)
 
- -- Niels Thykier <niels@thykier.net>  Wed, 03 Feb 2021 17:28:18 +0000
+ -- Niels Thykier <niels@thykier.net>  Wed, 03 Feb 2021 19:43:32 +0000
 
 debhelper (13.3.2) unstable; urgency=medium
 
