--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (13.3.4) UNRELEASED; urgency=medium
+
+  [ Jakub Wilk ]
+  * debhelper.pod: Add missing space after ")"
+
+ -- Axel Beckert <abe@debian.org>  Mon, 22 Feb 2021 09:34:34 +0100
+
 debhelper (13.3.3) unstable; urgency=medium
 
   [ Niels Thykier ]
