Update .po files wrt. ba47b9acdf004722e41292d9ab04523651b2181d

--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debhelper 12.9\n"
 "Report-Msgid-Bugs-To: debhelper@packages.debian.org\n"
-"POT-Creation-Date: 2021-01-31 23:36+0100\n"
+"POT-Creation-Date: 2021-02-22 09:37+0100\n"
 "PO-Revision-Date: 2020-02-07 19:21+0100\n"
 "Last-Translator: Erik Pfannenstein <debianignatz@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
@@ -3450,10 +3450,18 @@ msgstr "B<HOME>, B<XDG_*>"
 
 #. type: textblock
 #: debhelper.pod:1494
+#, fuzzy
+#| msgid ""
+#| "In compat 13 and later, these environment variables are reset before "
+#| "invoking the upstream build system via the B<dh_auto_*> helpers.  The "
+#| "variables B<HOME> (all B<dh_auto_*> helpers)and B<XDG_RUNTIME_DIR> "
+#| "(B<dh_auto_test> only) will be set to a writable directory. All remaining "
+#| "variables and B<XDG_RUNTIME_DIR> (except for during B<dh_auto_test>) will "
+#| "be cleared."
 msgid ""
 "In compat 13 and later, these environment variables are reset before "
 "invoking the upstream build system via the B<dh_auto_*> helpers.  The "
-"variables B<HOME> (all B<dh_auto_*> helpers)and B<XDG_RUNTIME_DIR> "
+"variables B<HOME> (all B<dh_auto_*> helpers) and B<XDG_RUNTIME_DIR> "
 "(B<dh_auto_test> only) will be set to a writable directory. All remaining "
 "variables and B<XDG_RUNTIME_DIR> (except for during B<dh_auto_test>) will be "
 "cleared."
