--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debhelper 13.3.2\n"
 "Report-Msgid-Bugs-To: debhelper@packages.debian.org\n"
-"POT-Creation-Date: 2021-01-31 23:36+0100\n"
+"POT-Creation-Date: 2021-02-22 09:37+0100\n"
 "PO-Revision-Date: 2021-02-01 14:37+0000\n"
 "Last-Translator: Américo Monteiro <a_monteiro@gmx.com>\n"
 "Language-Team: Portuguese <>\n"
@@ -2721,14 +2721,6 @@ msgstr ""
 
 #. type: textblock
 #: debhelper.pod:1237
-#| msgid ""
-#| "This can cause issues with running binaries directly from the build "
-#| "directories as they might now require a manually set B<LD_LIBRARY_PATH>.  "
-#| "If you need to override this change, we recommend that you try to pass "
-#| "the B<-DCMAKE_SKIP_RPATH=OFF> option first to see if that fixes the "
-#| "problem (leaving B<BUILD_RPATH_USE_ORIGIN> at its new default).  This "
-#| "should undo the need for B<LD_LIBRARY_PATH> and avoid the reproducibility "
-#| "issues on Linux, where B<$ORIGIN> is supported by the runtime linkers."
 msgid ""
 "This can cause issues with running binaries directly from the build "
 "directories as they might now require a manually set B<LD_LIBRARY_PATH>.  If "
@@ -2750,9 +2742,6 @@ msgstr ""
 
 #. type: textblock
 #: debhelper.pod:1247
-#| msgid ""
-#| "B<dh_installsystemduser> is now included in the B<dh> standard sequence "
-#| "by default."
 msgid "The tool B<dh_installsysusers> is now included in the default sequence."
 msgstr ""
 "A ferramenta B<dh_installsysusers> está agora incluída na sequência "
@@ -3388,10 +3377,18 @@ msgstr "B<HOME>, B<XDG_*>"
 
 #. type: textblock
 #: debhelper.pod:1494
+#, fuzzy
+#| msgid ""
+#| "In compat 13 and later, these environment variables are reset before "
+#| "invoking the upstream build system via the B<dh_auto_*> helpers.  The "
+#| "variables B<HOME> (all B<dh_auto_*> helpers)and B<XDG_RUNTIME_DIR> "
+#| "(B<dh_auto_test> only) will be set to a writable directory. All remaining "
+#| "variables and B<XDG_RUNTIME_DIR> (except for during B<dh_auto_test>) will "
+#| "be cleared."
 msgid ""
 "In compat 13 and later, these environment variables are reset before "
 "invoking the upstream build system via the B<dh_auto_*> helpers.  The "
-"variables B<HOME> (all B<dh_auto_*> helpers)and B<XDG_RUNTIME_DIR> "
+"variables B<HOME> (all B<dh_auto_*> helpers) and B<XDG_RUNTIME_DIR> "
 "(B<dh_auto_test> only) will be set to a writable directory. All remaining "
 "variables and B<XDG_RUNTIME_DIR> (except for during B<dh_auto_test>) will be "
 "cleared."
@@ -3515,9 +3512,6 @@ msgstr ""
 
 #. type: textblock
 #: debhelper.pod:1542
-#| msgid ""
-#| "This environment variable is intended for testing purposes; not "
-#| "production builds."
 msgid "This option is intended for testing purposes; not production builds."
 msgstr ""
 "Esta opção destina-se a objectivos de teste; não compilações produtivas."
@@ -4365,8 +4359,7 @@ msgid ""
 "      #\n"
 "      # And it gets even more complicated to reason about if dh needs to\n"
 "      # recurse into debian/rules because you have an \"explicit\"\n"
-"      # standard target (e.g. a \"build-arch:\" target separate from \""
-"%:\").\n"
+"      # standard target (e.g. a \"build-arch:\" target separate from \"%:\").\n"
 "      ifneq (...)\n"
 "      override_dh_baz:\n"
 "          maybe run this\n"
@@ -4381,8 +4374,7 @@ msgstr ""
 "      #\n"
 "      # And it gets even more complicated to reason about if dh needs to\n"
 "      # recurse into debian/rules because you have an \"explicit\"\n"
-"      # standard target (e.g. a \"build-arch:\" target separate from \""
-"%:\").\n"
+"      # standard target (e.g. a \"build-arch:\" target separate from \"%:\").\n"
 "      ifneq (...)\n"
 "      override_dh_baz:\n"
 "          maybe run this\n"
@@ -5770,18 +5762,14 @@ msgstr ""
 #: dh_clean:25
 #, no-wrap
 msgid ""
-"It removes the package build directories, and removes some other files"
-" including\n"
-"F<debian/files>, and any detritus left behind by other debhelper commands."
-" It\n"
+"It removes the package build directories, and removes some other files including\n"
+"F<debian/files>, and any detritus left behind by other debhelper commands. It\n"
 "also removes common files that should not appear in a Debian diff:\n"
 "  #*# *~ DEADJOE *.orig *.rej *.SUMS TAGS .deps/* *.P *-stamp\n"
 "\n"
 msgstr ""
-"Remove os directórios de compilação do pacote, e remove mais alguns ficheiros"
-" incluindo\n"
-"F<debian/files>, e quaisquer detritos deixados por outros comandos debhelper."
-" Também\n"
+"Remove os directórios de compilação do pacote, e remove mais alguns ficheiros incluindo\n"
+"F<debian/files>, e quaisquer detritos deixados por outros comandos debhelper. Também\n"
 "remove ficheiros comuns que não deveriam aparecer num diff de Debian:\n"
 "  #*# *~ DEADJOE *.orig *.rej *.SUMS TAGS .deps/* *.P *-stamp\n"
 "\n"
@@ -7429,8 +7417,7 @@ msgid ""
 "\t# Script for #PACKAGE#\n"
 "\t#TOKEN#\n"
 "\tEOF\n"
-"    dh_installdeb -pfoo -pbar -pbaz  --define TOKEN=default --define"
-" pkg.bar.TOKEN=unique-bar-value \\\n"
+"    dh_installdeb -pfoo -pbar -pbaz  --define TOKEN=default --define pkg.bar.TOKEN=unique-bar-value \\\n"
 "      --define pkg.baz.TOKEN=unique-baz-value\n"
 "\n"
 msgstr ""
@@ -7446,8 +7433,7 @@ msgstr ""
 "\t# Script for #PACKAGE#\n"
 "\t#TOKEN#\n"
 "\tEOF\n"
-"    dh_installdeb -pfoo -pbar -pbaz  --define TOKEN=default --define"
-" pkg.bar.TOKEN=unique-bar-value \\\n"
+"    dh_installdeb -pfoo -pbar -pbaz  --define TOKEN=default --define pkg.bar.TOKEN=unique-bar-value \\\n"
 "      --define pkg.baz.TOKEN=unique-baz-value\n"
 "\n"
 
@@ -8034,12 +8020,12 @@ msgid ""
 "with using F<debian/>I<package>F<.doc-base.*> files can lead to "
 "uninstallable packages. See L<https://bugs.debian.org/980903> for details."
 msgstr ""
-"Por favor tenha atenção que esta de-duplicação é actualmente feita apenas "
-"em memória, assim por agora requer o B<dh_installdocs> seja chamado não "
-"mais do que uma vez durante a compilação do pacote. Chamar "
-"B<dh_installdocs -p>I<package> em combinação com o uso de ficheiros "
-"F<debian/>I<package>F<.doc-base.*> pode levar a pacotes não instaláveis. "
-"Veja L<https://bugs.debian.org/980903> para detalhes."
+"Por favor tenha atenção que esta de-duplicação é actualmente feita apenas em "
+"memória, assim por agora requer o B<dh_installdocs> seja chamado não mais do "
+"que uma vez durante a compilação do pacote. Chamar B<dh_installdocs -"
+"p>I<package> em combinação com o uso de ficheiros F<debian/>I<package>F<.doc-"
+"base.*> pode levar a pacotes não instaláveis. Veja L<https://bugs.debian."
+"org/980903> para detalhes."
 
 #. type: textblock
 #: dh_installdocs:106 dh_installinfo:47 dh_installman:92
@@ -11444,18 +11430,14 @@ msgstr ""
 
 #. type: textblock
 #: dh_strip:22
-#| msgid ""
-#| "B<dh_strip> is a debhelper program that is responsible for stripping "
-#| "executables, shared libraries, and static libraries that are not used for "
-#| "debugging."
 msgid ""
 "B<dh_strip> is a debhelper program that is responsible for stripping out "
 "debug symbols in executables, shared libraries, and static libraries that "
 "are not needed during execution."
 msgstr ""
 "B<dh_strip> é um programa debhelper que é responsável por retirar símbolos "
-"de depuração em executáveis, bibliotecas partilhadas, e bibliotecas estáticas "
-"que não são necessárias durante a execução."
+"de depuração em executáveis, bibliotecas partilhadas, e bibliotecas "
+"estáticas que não são necessárias durante a execução."
 
 #. type: textblock
 #: dh_strip:26
@@ -11615,12 +11597,10 @@ msgstr ""
 #: dh_strip:100
 #, no-wrap
 msgid ""
-"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<<"
-" 2.1-3~)'\n"
+"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< 2.1-3~)'\n"
 "\n"
 msgstr ""
-"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<<"
-" 2.1-3~)'\n"
+"  dh_strip --dbgsym-migration='libfoo-tools-dbg (<< 2.1-3~), libfoo2-dbg (<< 2.1-3~)'\n"
 "\n"
 
 #. type: =item
