--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ debhelper (13.3.4) UNRELEASED; urgency=medium
   [ Jakub Wilk ]
   * debhelper.pod: Add missing space after ")"
 
+  [ Translations ]
+  * Update French translation (Jean-Pierre Giraud)  (Closes: #982675)
+
  -- Axel Beckert <abe@debian.org>  Mon, 22 Feb 2021 09:34:34 +0100
 
 debhelper (13.3.3) unstable; urgency=medium
