--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (13.3.4) UNRELEASED; urgency=medium
+debhelper (13.3.4) unstable; urgency=medium
 
   [ Jakub Wilk ]
   * debhelper.pod: Add missing space after ")"
@@ -6,7 +6,7 @@ debhelper (13.3.4) UNRELEASED; urgency=medium
   [ Translations ]
   * Update French translation (Jean-Pierre Giraud)  (Closes: #982675)
 
- -- Axel Beckert <abe@debian.org>  Mon, 22 Feb 2021 09:34:34 +0100
+ -- Niels Thykier <niels@thykier.net>  Sat, 06 Mar 2021 09:53:10 +0000
 
 debhelper (13.3.3) unstable; urgency=medium
 
