d/changelog: Add changelog entries
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+debhelper (13.4) UNRELEASED; urgency=medium
+
+  [ Dimitri John Ledkov ]
+  * dh_dwz: run in parallel across packages.  (Closes: !47)
+
+  [ Andrej Shadura ]
+  * Dh_Buildsystems.pm: Add bmake and mkcmake as third-party
+    build systems.  (Closes: !46)
+
+  [ Guillem Jover ]
+  * Dh_Buildsystems.pm: Add golang as a third-party build
+    system.  (Closes: #981106)
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 21 Mar 2021 09:38:35 +0000
+
 debhelper (13.3.4) unstable; urgency=medium
 
   [ Jakub Wilk ]
