autoscripts: DPKG_ROOT support for systemd/init scripts
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,11 @@ debhelper (13.4) UNRELEASED; urgency=medium
   * Dh_Buildsystems.pm: Add golang as a third-party build
     system.  (Closes: #981106)
 
+  [ Niels Thykier ]
+  * autoscripts/*: Add support for DPKG_ROOT in systemd, tmpusers,
+    sysusers and init related snippets.  Based on an initial patch
+    from Helmut Grohne.  (Closes: #983566)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Mar 2021 09:38:35 +0000
 
 debhelper (13.3.4) unstable; urgency=medium
