autoscripts: Reorder conditions to avoid redundant stats
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,9 @@ debhelper (13.4) UNRELEASED; urgency=medium
   * autoscripts/*: Add support for DPKG_ROOT in systemd, tmpusers,
     sysusers and init related snippets.  Based on an initial patch
     from Helmut Grohne.  (Closes: #983566)
+  * autoscripts/*: Reorder conditions in some scripts to avoid
+    doing a redundant stat call when a script paramter can decide
+    to skip it.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Mar 2021 09:38:35 +0000
 
