Remove dh_gconf
Note that dh_gconf has not been added to the list of obsolete commands
as it would break packages that have migrated to compat 13.  It will
come in a later commit.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,11 @@ debhelper (13.4) UNRELEASED; urgency=medium
   * autoscripts/*: Reorder conditions in some scripts to avoid
     doing a redundant stat call when a script paramter can decide
     to skip it.
+  * dh_gconf: Remove the command as it does nothing.
+    (Closes: #908845)
+  * doc/TODO: Remove reference to dh_gconf.
+  * root_sequence.pm: Remove dh_gconf from root sequence.
+  * man/po4a/po4a.cfg: Remove dh_gconf from translations.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Mar 2021 09:38:35 +0000
 
