Mark dh_gconf as obsolete (error from v14)
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -1246,6 +1246,12 @@ is supported by the runtime linkers.
 
 The tool B<dh_installsysusers> is now included in the default sequence.
 
+=item -
+
+Use of the B<dh_gconf> command in override and hook targets now causes
+an error.  The B<dh_gconf> command has been a no-op for years and was
+removed in debhelper 13.4.
+
 =back
 
 =back
