d/changelog: Add entry for !40 / #966396
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,11 @@ debhelper (13.4) UNRELEASED; urgency=medium
   * debhelper.pod: Document that referencing dh_gconf in hook targets
     will cause an error in compat 14.
 
+  [ Dominic Hargreaves ]
+  * perl_build.pm,perl_makemaker.pm: Make debhelper use the same perl
+    as it runs under (via Perl's $^X variable) when invoking the
+    upstream build system.  (Closes: !40, #966396)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Mar 2021 09:38:35 +0000
 
 debhelper (13.3.4) unstable; urgency=medium
