dh_fixperms: Make files in usr/libexec +x
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,8 @@ debhelper (13.4) UNRELEASED; urgency=medium
   * doc/PROGRAMMING: Update docs to reflect API change.
   * debhelper.pod: Document that referencing dh_gconf in hook targets
     will cause an error in compat 14.
+  * dh_fixperms: Correct permissions of files beneath usr/libexec to
+    be executable.  (Closes: #979401)
 
   [ Dominic Hargreaves ]
   * perl_build.pm,perl_makemaker.pm: Make debhelper use the same perl
