--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,10 @@ debhelper (13.4) UNRELEASED; urgency=medium
     provided by systemd upstream.  (Closes: #986329)
   * dh_installsystemd: Ditto (but only relevant in compat 12 or
     earlier)
+  * cmake.pm: Pass -DCMAKE_FIND_USE_PACKAGE_REGISTRY=OFF to cmake in
+    addition to -DCMAKE_FIND_PACKAGE_NO_PACKAGE_REGISTRY=ON as the
+    former is intended to replace the latter.  Thanks to Raul Tambre
+    for reporting the issue.  (Closes: #988973)
 
   [ Dominic Hargreaves ]
   * perl_build.pm,perl_makemaker.pm: Make debhelper use the same perl
