--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,10 @@ debhelper (13.4) UNRELEASED; urgency=medium
     addition to -DCMAKE_FIND_PACKAGE_NO_PACKAGE_REGISTRY=ON as the
     former is intended to replace the latter.  Thanks to Raul Tambre
     for reporting the issue.  (Closes: #988973)
+  * Dh_Lib.pm: Bump version requirement to v5.28 to reflect the actual
+    requirements (the code was using v5.28 features).  Thanks to
+    Sérgio Basto for reporting the issue.
+  * dh_missing: Ditto.
 
   [ Dominic Hargreaves ]
   * perl_build.pm,perl_makemaker.pm: Make debhelper use the same perl
