d/changelog: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,7 +16,7 @@ debhelper (13.4) UNRELEASED; urgency=medium
     sysusers and init related snippets.  Based on an initial patch
     from Helmut Grohne.  (Closes: #983566)
   * autoscripts/*: Reorder conditions in some scripts to avoid
-    doing a redundant stat call when a script paramter can decide
+    doing a redundant stat call when a script parameter can decide
     to skip it.
   * dh_gconf: Remove the command as it does nothing.
     (Closes: #908845)
