--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (13.4) UNRELEASED; urgency=medium
+debhelper (13.4) unstable; urgency=medium
 
   [ Dimitri John Ledkov ]
   * dh_dwz: run in parallel across packages.  (Closes: !47)
@@ -76,7 +76,7 @@ debhelper (13.4) UNRELEASED; urgency=medium
   * Always generate unique doc-base file names based on package name and
     document ID. (Closes: #980903)
 
- -- Niels Thykier <niels@thykier.net>  Sun, 21 Mar 2021 09:38:35 +0000
+ -- Niels Thykier <niels@thykier.net>  Tue, 17 Aug 2021 16:32:34 +0000
 
 debhelper (13.3.4) unstable; urgency=medium
 
