d/changelog: Correct bug number in 13.4
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (13.4.1) UNRELEASED; urgency=medium
+
+  * debian/changelog: Correct bug number in the 13.4 entry.
+
+ -- Niels Thykier <niels@thykier.net>  Tue, 17 Aug 2021 16:55:53 +0000
+
 debhelper (13.4) unstable; urgency=medium
 
   [ Dimitri John Ledkov ]
@@ -32,7 +38,7 @@ debhelper (13.4) unstable; urgency=medium
   * debhelper.pod: Document that referencing dh_gconf in hook targets
     will cause an error in compat 14.
   * dh_fixperms: Correct permissions of files beneath usr/libexec to
-    be executable.  (Closes: #979401)
+    be executable.  (Closes: #980325)
   * dh_installtmpfiles: Only register tmpfiles ending with ".conf" as
     tmpfiles in /usr/lib/tmpfiles.d and /etc/tmpfiles.d.  This ensures
     that dh_installtmpfiles gracefully copes with e.g. README files
