d/changelog: Document Client Adam's autoscript changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (13.4.1) UNRELEASED; urgency=medium
+
+  [ Clint Adams ]
+  * autoscripts/*: Replace `which` with `command -v`.
+
+ -- Niels Thykier <niels@thykier.net>  Fri, 20 Aug 2021 05:46:01 +0000
+
 debhelper (13.4+nmu1) unstable; urgency=high
 
   [ Sean Whitton ]
