--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (13.4.1) UNRELEASED; urgency=medium
+debhelper (13.4.1) unstable; urgency=medium
 
   [ Clint Adams ]
   * autoscripts/*: Replace `which` with `command -v`.
@@ -12,7 +12,7 @@ debhelper (13.4.1) UNRELEASED; urgency=medium
   * autoscripts/postinst-init-nostart: Call invoke-rc.d when
     a non-empty DPKG_ROOT is used.  (Closes: #992556)
 
- -- Niels Thykier <niels@thykier.net>  Fri, 20 Aug 2021 05:46:01 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 21 Aug 2021 09:01:00 +0000
 
 debhelper (13.4+nmu1) unstable; urgency=high
 
