--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (13.5) UNRELEASED; urgency=medium
+
+  * dh_installdeb: Install debian/conffiles in compat 12+ again
+    (undoing the compat 12 change saying dh_installdeb would ignore
+    this file).  The file can now be using for the activating the
+    `remove-on-upgrade` feature from dpkg 1.20.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 22 Aug 2021 07:13:37 +0000
+
 debhelper (13.4.1) unstable; urgency=medium
 
   [ Clint Adams ]
