dh_installdeb: Rewrite rm_conffile into remove-on-upgrade
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ debhelper (13.5) UNRELEASED; urgency=medium
     (undoing the compat 12 change saying dh_installdeb would ignore
     this file).  The file can now be using for the activating the
     `remove-on-upgrade` feature from dpkg 1.20.
+  * dh_installdeb: Automatically rewrite `rm_conffiles` into the
+    new `remove-on-upgrade` feature from dpkg when possible.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 22 Aug 2021 07:13:37 +0000
 
