d/changelog: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -108,7 +108,7 @@ debhelper (13.4) unstable; urgency=medium
   * dh_systemd_start: Ditto.
   * dh_installinit: Ditto.
   * dh_installsystemd: Merge /lib/systemd into /usr/lib/systemd if both
-    are present in the package staging directory (prefering the latter
+    are present in the package staging directory (preferring the latter
     in case of conflicts).  (Closes: #987989)
   * dh_systemd_enable: Ditto.
 
