dh: Document debhelper provided dh sequences
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ debhelper (13.5) UNRELEASED; urgency=medium
     (Closes: #992623)
   * python_support.pm: Remove obsolete dh addon.  It did nothing
     but warning and nothing used it anymore.
+  * dh: Document debhelper provided dh addon sequences.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 22 Aug 2021 07:13:37 +0000
 
