d/changelog: Document dh_assistant
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,10 @@ debhelper (13.5) UNRELEASED; urgency=medium
   * debhelper.pod: Document the dh_auto_install will change behaviour
     in compat 15 for single binary packages and dh will warning about
     that in compat 14.
+  * dh_assistant: New tool for assisting third-party tools.  At the
+    moment, it primarily supports introspection related features but
+    will hopefully be extended to support more use cases.
+    (Closes: #984900)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 22 Aug 2021 07:13:37 +0000
 
