d/changelog: Fix typo in changelog
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,7 @@ debhelper (13.5) UNRELEASED; urgency=medium
     DEB_BUILD_OPTIONS.  Thanks to Paul Wise for the suggestion.
     (Closes: #992623)
   * python_support.pm: Remove obsolete dh addon.  It did nothing
-    but warning and nothing used it anymore.
+    but warn and nothing used it anymore.
   * dh: Document debhelper provided dh addon sequences.
   * single_binary.pm: New dh addon ("single-binary") that explicitly
     activates the "single binary" work flow, where dh_auto_install
