--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (13.5) UNRELEASED; urgency=medium
+debhelper (13.5) unstable; urgency=medium
 
   * dh_installdeb: Install debian/conffiles in compat 12+ again
     (undoing the compat 12 change saying dh_installdeb would ignore
@@ -38,7 +38,7 @@ debhelper (13.5) UNRELEASED; urgency=medium
     will hopefully be extended to support more use cases.
     (Closes: #984900)
 
- -- Niels Thykier <niels@thykier.net>  Sun, 22 Aug 2021 07:13:37 +0000
+ -- Niels Thykier <niels@thykier.net>  Mon, 30 Aug 2021 19:50:42 +0000
 
 debhelper (13.4.1) unstable; urgency=medium
 
