cmake ctest: put arguments before dh_auto_test arguments
This allows overriding them in debian/rules override_dh_auto_test.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (13.5.1) UNRELEASED; urgency=medium
+
+  * cmake.pm: make it possible to override dh provided ctest arguments
+
+ -- Paul Wise <pabs@debian.org>  Tue, 31 Aug 2021 08:06:18 +0800
+
 debhelper (13.5) unstable; urgency=medium
 
   * dh_installdeb: Install debian/conffiles in compat 12+ again
