--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
 debhelper (13.5.1) UNRELEASED; urgency=medium
 
+  [ Paul Wise ]
   * cmake.pm: make it possible to override dh provided ctest arguments
+
+  [ Niels Thykier ]
+  * cmake.pm: Add missing import which broke cmake related builds.
+    Thanks to Boyuan Yang for reporting the issue.
+    (Closes: #993345)
 
  -- Paul Wise <pabs@debian.org>  Tue, 31 Aug 2021 08:06:18 +0800
 
