--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (13.5.1) UNRELEASED; urgency=medium
+debhelper (13.5.1) unstable; urgency=medium
 
   [ Paul Wise ]
   * cmake.pm: make it possible to override dh provided ctest arguments
@@ -8,7 +8,7 @@ debhelper (13.5.1) UNRELEASED; urgency=medium
     Thanks to Boyuan Yang for reporting the issue.
     (Closes: #993345)
 
- -- Paul Wise <pabs@debian.org>  Tue, 31 Aug 2021 08:06:18 +0800
+ -- Niels Thykier <niels@thykier.net>  Tue, 31 Aug 2021 05:43:35 +0000
 
 debhelper (13.5) unstable; urgency=medium
 
