--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (13.5.2) UNRELEASED; urgency=medium
+
+  * dh_installsystemd: Revert change to deploy systemd files into
+    usr/lib/systemd.  (Closes: #993316, #993759)
+  * dh_installinit: Ditto.
+  * dh_systemd_enable: Ditto.
+  * dh_systemd_start: Ditto.
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 06 Sep 2021 17:43:56 +0000
+
 debhelper (13.5.1) unstable; urgency=medium
 
   [ Paul Wise ]
