--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ debhelper (13.5.2) UNRELEASED; urgency=medium
   * SequencerUtil.pm: Remove duplicate "-a" option to some commands.
     Thanks to Christoph Berg for reporting the issue.
     (Closes: #971761)
+  * dh_installdeb: Revert the change to rewrite `rm_conffiles` into
+    `remove-on-upgrade` due to it causing bugs in non-trivial cases.
+    (Closes: #994919)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 06 Sep 2021 17:43:56 +0000
 
