d/changelog: Document Christoph's change
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (13.5.2) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh_installsystemd: Revert change to deploy systemd files into
     usr/lib/systemd.  (Closes: #993316, #993759)
   * dh_installinit: Ditto.
@@ -11,6 +12,9 @@ debhelper (13.5.2) UNRELEASED; urgency=medium
   * dh_installdeb: Revert the change to rewrite `rm_conffiles` into
     `remove-on-upgrade` due to it causing bugs in non-trivial cases.
     (Closes: #994919)
+
+  [ Christoph Berg ]
+  * dh_installtmpfiles: Add missing option name in POD documentation.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 06 Sep 2021 17:43:56 +0000
 
